@@ -4,14 +4,22 @@ import gm.builder.PizzaBuilder;
 import gm.model.Pizza;
 import gm.service.MestrePizzer;
 
-import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
 import java.util.Scanner;
+import java.util.stream.Collectors;
 
 public class Menu {
     private final Scanner scanner;
     private boolean salir = false;
+
+    private static final int OPCION_HAWAIANA = 1;
+    private static final int OPCION_VEGETARIANA = 2;
+    private static final int OPCION_PERSONALIZADA = 3;
+    private static final int OPCION_SALIR = 4;
+
+    private static final List<String> TAMANOS_VALIDOS = Arrays.asList("pequeña", "mediana", "grande");
+    private static final List<String> MASAS_VALIDAS = Arrays.asList("fina", "gruesa", "rellena");
 
     public Menu(Scanner scanner) {
         this.scanner = scanner;
@@ -20,37 +28,43 @@ public class Menu {
     public void mostrarMenu() {
         while (!salir) {
             imprimirOpcionesMenu();
-            int opcion = obtenerOpcion();
-            procesarOpcion(opcion);
+            int option = obtenerOpcion();
+            procesarOpcion(option);
         }
     }
 
     private void imprimirOpcionesMenu() {
         System.out.println("\nMenú - Crear tu Pizza:");
-        System.out.println("1. Pizza Hawaiana");
-        System.out.println("2. Pizza Vegetariana");
-        System.out.println("3. Crear pizza personalizada");
-        System.out.println("4. Salir");
+        System.out.println(OPCION_HAWAIANA + ". Pizza Hawaiana");
+        System.out.println(OPCION_VEGETARIANA + ". Pizza Vegetariana");
+        System.out.println(OPCION_PERSONALIZADA + ". Crear pizza personalizada");
+        System.out.println(OPCION_SALIR + ". Salir");
         System.out.print("Elige una opción: ");
     }
 
     private int obtenerOpcion() {
+        int option = -1;
+
         while (true) {
+            System.out.print("Elige una opción: ");
+            String input = scanner.nextLine();
+
             try {
-                int opcion = Integer.parseInt(scanner.nextLine());
-                if (opcion >= 1 && opcion <= 4) {
-                    return opcion;
-                } else {
-                    System.out.println("Error: Ingresa un número entre 1 y 4.");
-                }
+                option = Integer.parseInt(input);
             } catch (NumberFormatException e) {
                 System.out.println("Error: Ingresa un número válido.");
+                continue;
             }
+
+            if (option >= OPCION_HAWAIANA && option <= OPCION_SALIR) {
+                return option;
+            }
+            System.out.println("Error: Ingresa un número entre " + OPCION_HAWAIANA + " y " + OPCION_SALIR + ".");
         }
     }
 
     private void procesarOpcion(int opcion) {
-        if (opcion == 4) {
+        if (opcion == OPCION_SALIR) {
             confirmarSalida();
         } else {
             construirPizza(opcion);
@@ -61,18 +75,16 @@ public class Menu {
         PizzaBuilder builder = new PizzaBuilder();
         MestrePizzer mestre = new MestrePizzer(builder);
 
-        String tamaño = pedirOpcion("Elige el tamaño (Pequeña, Mediana, Grande): ",
-                Arrays.asList("pequeña", "mediana", "grande"));
-        String masa = pedirOpcion("Elige el tipo de masa (Fina, Gruesa, Rellena): ",
-                Arrays.asList("fina", "gruesa", "rellena"));
+        String size = pedirOpcion("Elige el tamaño (Pequeña, Mediana, Grande): ", TAMANOS_VALIDOS);
+        String dough = pedirOpcion("Elige el tipo de masa (Fina, Gruesa, Rellena): ", MASAS_VALIDAS);
 
         Pizza pizza = null;
         switch (tipo) {
-            case 1 -> pizza = mestre.prepararPizzaHawaiana(tamaño, masa);
-            case 2 -> pizza = mestre.prepararPizzaVegetariana(tamaño, masa);
-            case 3 -> {
-                List<String> ingredientes = pedirIngredientes();
-                pizza = mestre.configurarPizzaPersonalizada(tamaño, masa, ingredientes);
+            case OPCION_HAWAIANA -> pizza = mestre.prepararPizzaHawaiana(size, dough);
+            case OPCION_VEGETARIANA -> pizza = mestre.prepararPizzaVegetariana(size, dough);
+            case OPCION_PERSONALIZADA -> {
+                List<String> toppings = pedirIngredientes();
+                pizza = mestre.configurarPizzaPersonalizada(size, dough, toppings);
             }
         }
 
@@ -85,9 +97,9 @@ public class Menu {
     private String pedirOpcion(String mensaje, List<String> opciones) {
         while (true) {
             System.out.print(mensaje);
-            String opcion = scanner.nextLine().trim().toLowerCase();
-            if (opciones.contains(opcion)) {
-                return opcion;
+            String option = scanner.nextLine().trim();
+            if (opciones.stream().anyMatch(op -> op.equalsIgnoreCase(option))) {
+                return option;
             }
             System.out.println("Error: Debes elegir entre " + String.join(", ", opciones) + ".");
         }
@@ -99,10 +111,10 @@ public class Menu {
             List<String> ingredientes = Arrays.stream(scanner.nextLine().split(","))
                     .map(String::trim)
                     .filter(s -> !s.isEmpty())
-                    .toList();
+                    .collect(Collectors.toList());
 
             if (!ingredientes.isEmpty()) {
-                return new ArrayList<>(ingredientes);
+                return ingredientes;
             }
             System.out.println("Debes agregar al menos un ingrediente.");
         }
@@ -110,8 +122,8 @@ public class Menu {
 
     private void confirmarSalida() {
         System.out.print("¿Seguro que quieres salir? (s/n): ");
-        String respuesta = scanner.nextLine().trim().toLowerCase();
-        if (respuesta.equals("s")) {
+        String respuesta = scanner.nextLine().trim();
+        if (respuesta.equalsIgnoreCase("s")) {
             salir = true;
             System.out.println("Saliendo del sistema...");
         }
